WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310699
REGRESSION(
309603@main
): Context menu event over existing PDF selection presents ill-formed context menu
https://bugs.webkit.org/show_bug.cgi?id=310699
Summary
REGRESSION(309603@main): Context menu event over existing PDF selection prese...
Abrar Rahman Protyasha
Reported
2026-03-25 02:54:34 PDT
rdar://173311130
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-03-25 03:00:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61316
EWS
Comment 2
2026-03-25 18:33:54 PDT
Committed
309954@main
(e66c9d03b983): <
https://commits.webkit.org/309954@main
> Reviewed commits have been landed. Closing PR #61316 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug