REGRESSION(309603@main): Context menu event over existing PDF selection presents ill-formed context menu https://bugs.webkit.org/show_bug.cgi?id=310699 rdar://173311130

Reviewed by Richard Robinson and Lily Spiniolas.

After 309603@main, we do not give the PDF plugin an opportunity to deal
with automation-derived context menu events. While the original patch is
still mostly correct, we need to special case for context menu events
since there is no synthetic analogue here.

* Source/WebCore/dom/Event.h:
  Drive-by: Export the textstream dumper to facilitate logging.
* Source/WebKit/WebProcess/Plugins/PluginView.cpp:
(WebKit::shouldNotForwardToPlugin):
(WebKit::PluginView::handleEvent):
  Drive-by: Add logging to understand how the plugin handles events.

Canonical link: https://commits.webkit.org/309954@main